src/objects/ADvendio__Value__c.object
<CustomObject>
    <description>Value for a specific key</description>
    <fields>
        <fullName>ADvendio__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>In the KeyValue Manager and Media Configuration, only active marked records will be available.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdServerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AdServer ID</label>
        <referenceTo>ADvendio__AdServer_ID__c</referenceTo>
        <relationshipLabel>Values</relationshipLabel>
        <relationshipName>Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__ExternalName__c</fullName>
        <description>This name will be used for PDF document.</description>
        <inlineHelpText>This name will be used for PDF document.</inlineHelpText>
        <label>External Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Key__c</fullName>
        <label>Key</label>
        <referenceTo>ADvendio__Key__c</referenceTo>
        <relationshipLabel>Values</relationshipLabel>
        <relationshipName>Values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_TargetingProvider__c</fullName>
        <description>Targeting Provider des zugehörigen Keys</description>
        <formula>Text(ADvendio__Key__r.SomDig_TargetingProvider__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Targeting Provider des zugehörigen Keys</inlineHelpText>
        <label>Targeting Provider</label>
        <type>Text</type>
    </fields>
    <label>Value</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Value Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>